View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030805 | Open CASCADE | OCCT:Visualization | public | 2019-06-24 14:52 | 2020-12-07 13:54 |
Reporter | kgv | Assigned To | apn | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.4.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030805: Visualization, StdSelect_BRepSelectionTool - empty sensitivity from polygon-only Edge | ||||
Description | Display a shape with polygon-only Edge results in no sensitivities created by StdSelect_BRepSelectionTool. | ||||
Steps To Reproduce | pload MODELING VISUALIZATION restore bug30805.brep b vclear vinit View1 vaxo vdisplay -dispMode 0 b vfit set p [vmoveto 118 178] checkpoint p $p {3.75 -4.54 4.5} 0.1 | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
bug30805.brep (28,424 bytes) |
|
Branch CR30805 has been created by kgv. SHA-1: 87f69c84f35ef44ada177cd06b28909f1ad34bcd Detailed log of new commits: Author: kgv Date: Mon Jun 24 15:03:49 2019 +0300 0030805: Visualization, StdSelect_BRepSelectionTool - empty sensitivity from polygon-only Edge StdSelect_BRepSelectionTool::GetEdgeSensitive() now takes polygon points before creating curve Adaptor. |
|
Please take the patch. |
|
Branch CR30805 has been updated forcibly by kgv. SHA-1: 92ae4736adf9f898085f3a8ba0da61853057dfb7 |
|
Combination - OCCT branch : CR30805 master SHA - 92ae4736adf9f898085f3a8ba0da61853057dfb7 d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : master SHA - c08b242c9da615bfdf83ca463321740d4cc22898 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16487.98000000005 / 16513.620000000094 [-0.16%] Products Total CPU difference: 10491.960000000065 / 10515.620000000044 [-0.22%] Windows-64-VC14: OCCT Total CPU difference: 17825.15625 / 17822.375 [+0.02%] Products Total CPU difference: 12141.703125 / 12126.671875 [+0.12%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30805 has been deleted by inv. SHA-1: 92ae4736adf9f898085f3a8ba0da61853057dfb7 |
occt: master e05d8d90 2019-06-24 12:03:49 Committer: apn Details Diff |
0030805: Visualization, StdSelect_BRepSelectionTool - empty sensitivity from polygon-only Edge StdSelect_BRepSelectionTool::GetEdgeSensitive() now takes polygon points before creating curve Adaptor. |
Affected Issues 0030805 |
|
mod - src/StdSelect/StdSelect_BRepSelectionTool.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-06-24 14:52 | kgv | New Issue | |
2019-06-24 14:52 | kgv | Assigned To | => kgv |
2019-06-24 14:59 | kgv | Steps to Reproduce Updated | |
2019-06-24 15:00 | kgv | File Added: bug30805.brep | |
2019-06-24 15:04 | git | Note Added: 0085262 | |
2019-06-24 15:08 | kgv | Relationship added | related to 0030146 |
2019-06-24 15:15 | kgv | Product Version | 7.4.0 => 6.4.0 |
2019-06-24 15:17 | kgv | Relationship added | child of 0021774 |
2019-06-24 19:54 | kgv | Note Added: 0085270 | |
2019-06-24 19:54 | kgv | Assigned To | kgv => bugmaster |
2019-06-24 19:54 | kgv | Severity | minor => trivial |
2019-06-24 19:54 | kgv | Status | new => resolved |
2019-06-24 19:55 | kgv | Status | resolved => reviewed |
2019-06-25 07:46 | git | Note Added: 0085273 | |
2019-06-25 13:06 | apn | Test case number | => Not needed |
2019-06-25 13:06 | apn | Note Added: 0085293 | |
2019-06-25 13:06 | apn | Status | reviewed => tested |
2019-07-01 17:28 | apn | Changeset attached | => occt master e05d8d90 |
2019-07-01 17:28 | apn | Assigned To | bugmaster => apn |
2019-07-01 17:28 | apn | Status | tested => verified |
2019-07-01 17:28 | apn | Resolution | open => fixed |
2019-07-08 12:58 | git | Note Added: 0085479 | |
2020-12-07 13:54 | kgv | Relationship added | child of 0028125 |