0030805: Visualization, StdSelect_BRepSelectionTool - empty sensitivity from polygon-only Edge

StdSelect_BRepSelectionTool::GetEdgeSensitive() now takes polygon points before creating curve Adaptor.